# tengri-stars

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: benchmark_compile.py  benchmark_samplers.py  forecast_campaign.py  magic_stitch_campaign.py
docs/: design-2026-07-09.md
notebooks/: 01_spectrum_to_stellar_parameters.ipynb  01_spectrum_to_stellar_parameters.py  02_magic_reproduction.ipynb  02_magic_reproduction.py  03_brutus_crossval.ipynb  03_brutus_crossval.py  03_tslte_photometry.ipynb  03_tslte_photometry.py  04_brutus_crossval.ipynb  04_brutus_crossval.py  05_fast_pipeline.ipynb  05_fast_pipeline.py  06_band_ablation.ipynb  06_band_ablation.py  06_five_band_forecast.ipynb  07_five_band_forecast.py  07_rgb_ms_separability.ipynb  07_rgb_ms_separability.py  08_branch_discrimination.ipynb  08_branch_discrimination.py  08_rgb_ms_separability.py  09_branch_discrimination.py  09_magic_stitch_validation.ipynb  09_magic_stitch_validation.py  11_isochrone_reddening_degeneracy.ipynb  11_isochrone_reddening_degeneracy.py
notebooks/forecast_results/: all5.csv  gri.csv  magic3.csv  no-cahk.csv  no-u.csv  summary.md  u-magic3.csv  ugi.csv
notebooks/stitch_results/: hard-vote_knownDM.csv  hard-vote_none.csv  hard-vote_p20.csv  hard-vote_p50.csv  magic-hard_knownDM.csv  magic-hard_none.csv  magic-hard_p20.csv  magic-hard_p50.csv  mixture_knownDM.csv  mixture_none.csv  mixture_p20.csv  mixture_p50.csv  summary.md  u_band_gain.md
src/tengri_stars/: __init__.py  branch.py  diagnostics.py  inference.py  model.py  parametrization.py  plotting.py
src/tengri_stars/grids/: __init__.py  isochrone_grid.py  photometry_grid.py  spectral_grid.py
tests/: conftest.py  test_branch.py  test_diagnostics.py  test_inference.py  test_isochrone_grid.py  test_parametrization.py  test_photometry_grid.py  test_plotting.py  test_spectrum_channel.py  test_star_model.py
